native/java/app/src/main/java/org/zowe/zowex/ffm/generated/ZjbCApi.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_submit_job(const char *jcl_content)
     * }
     */
    public static MethodHandle zjb_c_submit_job$handle() {
        return zjb_c_submit_job.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_submit_job(const char *jcl_content)
     * }
     */
    public static MemorySegment zjb_c_submit_job$address() {
        return zjb_c_submit_job.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJBStringResponse_C *zjb_c_submit_job(const char *jcl_content)
     * }
     */
    public static MemorySegment zjb_c_submit_job(MemorySegment jcl_content) {
        var mh$ = zjb_c_submit_job.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_submit_job", jcl_content);
            }
            return (MemorySegment)mh$.invokeExact(jcl_content);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_delete_job {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ZjbCApi.C_POINTER,
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_delete_job");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ZJBBasicResponse_C *zjb_c_delete_job(const char *jobid)
     * }
     */
    public static FunctionDescriptor zjb_c_delete_job$descriptor() {
        return zjb_c_delete_job.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ZJBBasicResponse_C *zjb_c_delete_job(const char *jobid)
     * }
     */
    public static MethodHandle zjb_c_delete_job$handle() {
        return zjb_c_delete_job.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ZJBBasicResponse_C *zjb_c_delete_job(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_delete_job$address() {
        return zjb_c_delete_job.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ZJBBasicResponse_C *zjb_c_delete_job(const char *jobid)
     * }
     */
    public static MemorySegment zjb_c_delete_job(MemorySegment jobid) {
        var mh$ = zjb_c_delete_job.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_delete_job", jobid);
            }
            return (MemorySegment)mh$.invokeExact(jobid);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_free_basic_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_free_basic_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zjb_c_free_basic_response(ZJBBasicResponse_C *response)
     * }
     */
    public static FunctionDescriptor zjb_c_free_basic_response$descriptor() {
        return zjb_c_free_basic_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zjb_c_free_basic_response(ZJBBasicResponse_C *response)
     * }
     */
    public static MethodHandle zjb_c_free_basic_response$handle() {
        return zjb_c_free_basic_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zjb_c_free_basic_response(ZJBBasicResponse_C *response)
     * }
     */
    public static MemorySegment zjb_c_free_basic_response$address() {
        return zjb_c_free_basic_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zjb_c_free_basic_response(ZJBBasicResponse_C *response)
     * }
     */
    public static void zjb_c_free_basic_response(MemorySegment response) {
        var mh$ = zjb_c_free_basic_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_free_basic_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_free_string_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_free_string_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zjb_c_free_string_response(ZJBStringResponse_C *response)
     * }
     */
    public static FunctionDescriptor zjb_c_free_string_response$descriptor() {
        return zjb_c_free_string_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zjb_c_free_string_response(ZJBStringResponse_C *response)
     * }
     */
    public static MethodHandle zjb_c_free_string_response$handle() {
        return zjb_c_free_string_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zjb_c_free_string_response(ZJBStringResponse_C *response)
     * }
     */
    public static MemorySegment zjb_c_free_string_response$address() {
        return zjb_c_free_string_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zjb_c_free_string_response(ZJBStringResponse_C *response)
     * }
     */
    public static void zjb_c_free_string_response(MemorySegment response) {
        var mh$ = zjb_c_free_string_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_free_string_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_free_job_list_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_free_job_list_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zjb_c_free_job_list_response(ZJobListResponse_C *response)
     * }
     */
    public static FunctionDescriptor zjb_c_free_job_list_response$descriptor() {
        return zjb_c_free_job_list_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zjb_c_free_job_list_response(ZJobListResponse_C *response)
     * }
     */
    public static MethodHandle zjb_c_free_job_list_response$handle() {
        return zjb_c_free_job_list_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zjb_c_free_job_list_response(ZJobListResponse_C *response)
     * }
     */
    public static MemorySegment zjb_c_free_job_list_response$address() {
        return zjb_c_free_job_list_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zjb_c_free_job_list_response(ZJobListResponse_C *response)
     * }
     */
    public static void zjb_c_free_job_list_response(MemorySegment response) {
        var mh$ = zjb_c_free_job_list_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_free_job_list_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_free_job_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_free_job_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zjb_c_free_job_response(ZJobResponse_C *response)
     * }
     */
    public static FunctionDescriptor zjb_c_free_job_response$descriptor() {
        return zjb_c_free_job_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zjb_c_free_job_response(ZJobResponse_C *response)
     * }
     */
    public static MethodHandle zjb_c_free_job_response$handle() {
        return zjb_c_free_job_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zjb_c_free_job_response(ZJobResponse_C *response)
     * }
     */
    public static MemorySegment zjb_c_free_job_response$address() {
        return zjb_c_free_job_response.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void zjb_c_free_job_response(ZJobResponse_C *response)
     * }
     */
    public static void zjb_c_free_job_response(MemorySegment response) {
        var mh$ = zjb_c_free_job_response.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("zjb_c_free_job_response", response);
            }
            mh$.invokeExact(response);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class zjb_c_free_job_dd_list_response {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ZjbCApi.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("zjb_c_free_job_dd_list_response");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void zjb_c_free_job_dd_list_response(ZJobDDListResponse_C *response)
     * }
     */
    public static FunctionDescriptor zjb_c_free_job_dd_list_response$descriptor() {
        return zjb_c_free_job_dd_list_response.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void zjb_c_free_job_dd_list_response(ZJobDDListResponse_C *response)
     * }
     */
    public static MethodHandle zjb_c_free_job_dd_list_response$handle() {
        return zjb_c_free_job_dd_list_response.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void zjb_c_free_job_dd_list_response(ZJobDDListResponse_C *response)
     * }
     */
    public static MemorySegment zjb_c_free_job_dd_list_response$address() {
        return zjb_c_free_job_dd_list_response.ADDR;
    }
